# Final

./: .gitignore  DEV_DEBUG_START.md  GAZEBO_SLAM_COMMANDS.md  RUN_GUIDE.md  curl_hub_m.sh  frames_2026-03-24_10.51.01.gv  opentcs_plant_model.json  opentcs_plant_model_hub_m.json  opentcs_plant_model_test1.json
.cursor/rules/: gazebo-only-robot.mdc  ros-standard-deps.mdc
.gradle-local/caches/journal-1/: file-access.properties
.gradle-local/caches/modules-2/files-2.1/com.diffplug.spotless/spotless-lib-extra/4.1.0/789a5bff6729a2bba8d3f21baa7fa2f88f6db975/: spotless-lib-extra-4.1.0.module
opentcs-master/: ROS2_ADAPTER_INTEGRATION.md  settings.gradle
opentcs-master/opentcs-kernel/: build.gradle
yahboomcar_ws/src/opentcs_ros2_bridge/: README.md  package.xml  setup.cfg  setup.py
yahboomcar_ws/src/opentcs_ros2_bridge/config/: evaluation_coordinate_map.yaml
yahboomcar_ws/src/opentcs_ros2_bridge/launch/: bridge_launch.py  evaluation_launch.py
yahboomcar_ws/src/opentcs_ros2_bridge/lib/opentcs_ros2_bridge/: bridge_node  logic_sim_robot  opentcs_map_coord
yahboomcar_ws/src/opentcs_ros2_bridge/opentcs_ros2_bridge/: __init__.py  bridge_node.py  coordinate_mapping.py  logic_sim_robot.py
yahboomcar_ws/src/opentcs_ros2_bridge/scripts/: bridge_node
yahboomcar_ws/src/robot_pose_publisher_ros2/src/: robot_pose_publisher.cpp
yahboomcar_ws/src/yahboomcar_KCFTracker/: COLCON_IGNORE
yahboomcar_ws/src/yahboomcar_bringup/launch/: yahboomcar_bringup_X3_launch.py
yahboomcar_ws/src/yahboomcar_description/: package.xml  setup.py
yahboomcar_ws/src/yahboomcar_description/launch/: gazebo_X3_launch.py
yahboomcar_ws/src/yahboomcar_description/models/yahboomcar_X3/: model.config  model.sdf
yahboomcar_ws/src/yahboomcar_description/rviz/: yahboomcar.rviz
yahboomcar_ws/src/yahboomcar_description/worlds/: yahboomcar_empty.world
yahboomcar_ws/src/yahboomcar_description/yahboomcar_description/: gazebo_topic_relay.py  gz_laser_scan_relay.py
yahboomcar_ws/src/yahboomcar_nav/: package.xml  setup.py
yahboomcar_ws/src/yahboomcar_nav/launch/: cartographer_launch.py  navigation_dwa_launch.py  occupancy_grid_launch.py
yahboomcar_ws/src/yahboomcar_nav/maps/: yahboomcar.pgm  yahboomcar.yaml
yahboomcar_ws/src/yahboomcar_nav/params/: dwa_nav_params.yaml
yahboomcar_ws/src/yahboomcar_nav/yahboomcar_nav/: amcl_initial_pose_publisher.py  fake_odom_tf.py
yahboomcar_ws/src/yahboomcar_point/: CMakeLists.txt  package.xml
yahboomcar_ws/tools/: auto_order_benchmark.py  collect_thesis_evidence.py
(+73 files in other folders)
