<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opentcs_ros2_bridge</name>
  <version>0.1.0</version>
  <description>Bridge: OpenTCS vehicle adapter (TCP) &lt;-&gt; ROS2 Nav2 (NavigateToPose)</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <exec_depend>yahboomcar_description</exec_depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>python3-yaml</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
