<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yahboomcar_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nx-ros2@todo.todo">nx-ros2</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>

  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!-- T1 中 joint_state_publisher 节点；系统需安装 ros-humble-joint-state-publisher -->
  <exec_depend>joint_state_publisher</exec_depend>
  <!-- 无头 Gazebo 时用 RViz 看模型/激光；需安装 ros-humble-rviz2 -->
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/..:${prefix}/models"/>
  </export>
</package>
